fixed medium and small order and spacing

--- a/preston-page/css/preston-large.css
+++ b/preston-page/css/preston-large.css
@@ -91,9 +91,7 @@ figure:hover {
     align-items: center;
 }
 
-
-
-.town-info { 
+.preston, .sodasprings, .fishhaven { 
     margin: 0 30px 0 0;
     padding: 10px;
 }
